# iwdsr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
dependencies/data-structures/rbtree/: rbtree.hpp
file-formats/: elf.cpp  elf.hpp
interlayer/program-loader/: program-loader.cpp
iwdsr/: CMakeLists.txt
iwdsr/file-formats/: elf64.cpp  elf64.hpp  pkg.cpp  pkg.hpp
iwdsr/interlayer/os-core/process/: address-space.cpp  address-space.hpp
iwdsr/interlayer/program-loader/: program-loader.cpp  program-loader.hpp
iwdsr/interlayer/virtual-memory/: virtual-memory.hpp
iwdsr/loader/: loader.cpp  loader.hpp  symbol-resolver.cpp  symbol-resolver.hpp
iwdsr/memory/: address-space.cpp  address-space.hpp  memory-map.cpp  memory-map.hpp  memory.cpp  memory.hpp  virtual-memory.cpp  virtual-memory.hpp
iwdsr/memory/virtual-memory/: linux-vm.cpp  linux-vm.hpp  win-vm.cpp  win-vm.hpp
iwdsr/misc/data-structures/rbtree/: rbtree.hpp
iwdsr/proccess/: address-space.cpp  address-space.hpp  process.cpp  process.hpp  virtual-memory.cpp  virtual-memory.hpp
iwdsr/pthread/: pthread.cpp  pthread.hpp
src/file-formats/: elf64.cpp
src/interlayer/program-loader/: program-loader.hpp
src/interlayer/virtual-memory/: virtual-memory.cpp  virtual-memory.hpp
